# GanitShastra

./: CMakeLists.txt  LICENSE  README.md
include/: Vector3.hpp
src/: Vector3.cpp
tests/: CMakeLists.txt  Vector3Test.cpp  main.cpp
